@@ -570,7 +570,7 @@ vector<string> QStringAllocations::supportedOptions() const
 }
 
 const char *const s_checkName = "qstring-allocations";
-REGISTER_CHECK(s_checkName, QStringAllocations, CheckLevel2)
+REGISTER_CHECK_WITH_FLAGS(s_checkName, QStringAllocations, CheckLevel2, RegisteredCheck::Option_Qt4Incompatible)
 REGISTER_FIXIT(QLatin1StringAllocations, "fix-qlatin1string-allocations", s_checkName)
 REGISTER_FIXIT(FromLatin1_FromUtf8Allocations, "fix-fromLatin1_fromUtf8-allocations", s_checkName)
 REGISTER_FIXIT(CharPtrAllocations, "fix-fromCharPtrAllocations", s_checkName)
