@@ -32,6 +32,7 @@ class Test:
         self.flags = ""
         self.must_fail = False
         self.blacklist_platforms = []
+        self.qt4compat = False
 
     def isScript(self):
         return self.filename.endswith(".sh")
@@ -142,6 +143,8 @@ def load_json(check_name):
                 test.must_fail = t['must_fail']
             if 'expects_failure' in t:
                 test.expects_failure = t['expects_failure']
+            if 'qt4compat' in t:
+                test.qt4compat = t['qt4compat']
 
             if not test.checks:
                 test.checks.append(test.check.name)
@@ -195,6 +198,9 @@ def clazy_standalone_command(test, qt):
     if not test.isFixedFile:
         result = " -enable-all-fixits " + result
 
+    if test.qt4compat:
+        result = " -qt4-compat " + result
+
     return result
 
 def clazy_command(qt, test, filename):
@@ -205,6 +211,9 @@ def clazy_command(qt, test, filename):
         result = os.environ['CLAZY_CXX'] + more_clazy_args() + qt.compiler_flags()
     else:
         result = "clang -Xclang -load -Xclang " + libraryName() + " -Xclang -add-plugin -Xclang clang-lazy " + more_clazy_args() + qt.compiler_flags()
+
+    if test.qt4compat:
+        result = result + " -Xclang -plugin-arg-clang-lazy -Xclang qt4-compat "
 
     if test.link:
         result = result + " " + link_flags()
