@@ -28,6 +28,7 @@
   - clazy-standalone executable. Allows to run clazy against a JSON compilation database
     instead of as a plugin. clang-tidy doesn't support loading external modules (https://bugs.llvm.org/show_bug.cgi?id=32739)
     so this is a good workaround.
+  - qt-compat mode. Allows to disable Qt5 specific checks by passing -Xclang -plugin-arg-clang-lazy -Xclang qt4-compat
   - New checks:
     install-event-filter
     qcolor-from-literal
